[package]
name = "schemamama"
version = "0.4.0"
authors = ["Skyler Lipthay <skyler.lipthay@gmail.com>", "Erich Schudt <erich_schudt@live.com>"]
description = "A lightweight database schema migration system"
readme = "README.md"
keywords = ["database", "migration"]
license = "MIT"
repository = "https://github.com/eschudt/schemamama"

[dependencies]
log = "0.4"
